crates/php-parser/tests/snapshots/integration__class_missing_name.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture_with_errors(source, &result.errors, &result.program)"
---
=== source ===
<?php class { }

=== errors ===
expected class name, found '{'
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Class": {
          "name": "<error>",
          "modifiers": {
            "is_abstract": false,
            "is_final": false,
            "is_readonly": false
          },
          "extends": null,
          "implements": [],
          "members": [],
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 15
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 15
  }
}
