crates/php-parser/tests/snapshots/integration__class_missing_name_then_valid_function.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture_with_errors(source, &result.errors, &result.program)"
---
=== source ===
<?php class {} function foo(): int { return 1; }

=== errors ===
expected class name, found '{'
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Class": {
          "name": "<error>",
          "modifiers": {
            "is_abstract": false,
            "is_final": false,
            "is_readonly": false
          },
          "extends": null,
          "implements": [],
          "members": [],
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 14
      }
    },
    {
      "kind": {
        "Function": {
          "name": "foo",
          "params": [],
          "body": [
            {
              "kind": {
                "Return": {
                  "kind": {
                    "Int": 1
                  },
                  "span": {
                    "start": 44,
                    "end": 45
                  }
                }
              },
              "span": {
                "start": 37,
                "end": 47
              }
            }
          ],
          "return_type": {
            "kind": {
              "Named": {
                "parts": [
                  "int"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 31,
                  "end": 34
                }
              }
            },
            "span": {
              "start": 31,
              "end": 34
            }
          },
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 15,
        "end": 48
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 48
  }
}
