crates/php-parser/tests/snapshots/integration__class_static_and_const.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
class Config {
    public const VERSION = '1.0';
    private const DEBUG = false;
    public static int $count = 0;
    public static function increment(): void {
        self::$count++;
    }
}

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Class": {
          "name": "Config",
          "modifiers": {
            "is_abstract": false,
            "is_final": false,
            "is_readonly": false
          },
          "extends": null,
          "implements": [],
          "members": [
            {
              "kind": {
                "ClassConst": {
                  "name": "VERSION",
                  "visibility": "Public",
                  "value": {
                    "kind": {
                      "String": "1.0"
                    },
                    "span": {
                      "start": 48,
                      "end": 53
                    }
                  },
                  "attributes": []
                }
              },
              "span": {
                "start": 25,
                "end": 59
              }
            },
            {
              "kind": {
                "ClassConst": {
                  "name": "DEBUG",
                  "visibility": "Private",
                  "value": {
                    "kind": {
                      "Bool": false
                    },
                    "span": {
                      "start": 81,
                      "end": 86
                    }
                  },
                  "attributes": []
                }
              },
              "span": {
                "start": 59,
                "end": 92
              }
            },
            {
              "kind": {
                "Property": {
                  "name": "count",
                  "visibility": "Public",
                  "set_visibility": null,
                  "is_static": true,
                  "is_readonly": false,
                  "type_hint": {
                    "kind": {
                      "Named": {
                        "parts": [
                          "int"
                        ],
                        "kind": "Unqualified",
                        "span": {
                          "start": 106,
                          "end": 109
                        }
                      }
                    },
                    "span": {
                      "start": 106,
                      "end": 109
                    }
                  },
                  "default": {
                    "kind": {
                      "Int": 0
                    },
                    "span": {
                      "start": 119,
                      "end": 120
                    }
                  },
                  "attributes": []
                }
              },
              "span": {
                "start": 92,
                "end": 120
              }
            },
            {
              "kind": {
                "Method": {
                  "name": "increment",
                  "visibility": "Public",
                  "is_static": true,
                  "is_abstract": false,
                  "is_final": false,
                  "by_ref": false,
                  "params": [],
                  "return_type": {
                    "kind": {
                      "Named": {
                        "parts": [
                          "void"
                        ],
                        "kind": "Unqualified",
                        "span": {
                          "start": 162,
                          "end": 166
                        }
                      }
                    },
                    "span": {
                      "start": 162,
                      "end": 166
                    }
                  },
                  "body": [
                    {
                      "kind": {
                        "Expression": {
                          "kind": {
                            "UnaryPostfix": {
                              "operand": {
                                "kind": {
                                  "StaticPropertyAccess": {
                                    "class": {
                                      "kind": {
                                        "Identifier": "self"
                                      },
                                      "span": {
                                        "start": 177,
                                        "end": 181
                                      }
                                    },
                                    "member": "count"
                                  }
                                },
                                "span": {
                                  "start": 177,
                                  "end": 189
                                }
                              },
                              "op": "PostIncrement"
                            }
                          },
                          "span": {
                            "start": 177,
                            "end": 191
                          }
                        }
                      },
                      "span": {
                        "start": 177,
                        "end": 197
                      }
                    }
                  ],
                  "attributes": []
                }
              },
              "span": {
                "start": 126,
                "end": 199
              }
            }
          ],
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 200
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 200
  }
}
